# HomeMoviesBackend

./: .gitignore  1.html  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: e7fc4fb5483e_create.py
database/: db.py
depends/: init_db.py
exceptions/: exceptions.py
models/: movies.py
router/: movies.py
schemas/: movies_schema.py
services/: file_service_movie.py  movies_crud.py  validate_file.py
